fix logo on mobile

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -144,6 +144,9 @@ ul li.menuLink {
   right: 15px;
   background: var(--yellow);
   border-radius: 2rem;
+  @media (min-width: 450px) {
+    top: 5rem;
+  }
 
   @media (min-width: 1023px) {
     top: 1.5rem;
@@ -160,6 +163,7 @@ ul li.menuLink {
   padding: 0.25rem 0.5rem;
   margin: 0;
 }
+
 .socialLink a {
   display: flex;
   margin: 0;
